--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ test {
 sonarqube {
     properties {
     property "sonar.projectKey", "squ_cefa566c04eb739c0697ee0c80375e2ca972be5e"
-    property "sonar.projectName", "spring-boot-starter-manisha"
+    property "sonar.projectName", "akhils-koothi"
     property "sonar.host.url", "http://65.0.71.40:9000"
   }
 }
