--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
     id 'war'
-    id "org.sonarqube" version "3.3"
+    id "org.sonarqube" version "3.4.0.2513"
 }
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
@@ -22,5 +22,12 @@ dependencies {
 test {
     useJUnitPlatform()
 }
-
+sonarqube {
+    properties {
+        property "sonar.sourceEncoding", "UTF-8"
+          -Dsonar.projectKey=test \
+          -Dsonar.host.url=http://3.111.33.152:9000 \
+          -Dsonar.login=sqp_edbc479549e4114698b8f98d0d253569c846e84a                
+    }
+}
 
