--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ sonarqube {
 properties {
     property "sonar.projectName", "test"
     property "sonar.projectKey", "test"
-    property "sonar.host.url", "http://52.66.245.159:9000/"
+    property "sonar.host.url", "http://3.7.66.114/:9000/"
     property "sonar.sourceEncoding", "UTF-8"
 }
 }
